fix: resolve inspection findings across plugin-core
- AuthMethod.java: "initialisation" → "initialization" (GrazieStyle)
- ToolSchemas.java: fix bad @link to McpProtocolHandler
- ToolRegistry.java: Collections.unmodifiableList(Arrays.asList(…)) → List.of(…)
- ChatDataModel.kt: remove unused SA_COLOR_COUNT constant
- PromptContextManager.kt: remove unused buildReferenceMarkers() method
- AgenticCopilotToolWindowContent.kt:
  - Remove unused setResponseStatus no-op stub and all 10 call sites
  - Remove unused MSG_THINKING constant
  - Fix setupPromptKeyBindings unused param + contentComponent JComponent type
  - Fix setter syntax: setOneLineMode, setReservePlaceAutoPopupIcon ×2, isAcpConnected
  - Fix KDoc unresolvable symbol references
  - Fix UI string capitalization (Restart/Clear menus, Paste as Scratch File)
  - Reduce cognitive complexity in 5 methods by extracting helpers:
    buildBubbleHtml → appendHtmlChar
    setupPromptKeyBindings → registerEnterSend, registerShiftEnterNewLine,
      registerPasteIntercept, registerTriggerCharDetection
    setupPromptDragDrop → handleFileDrop
    registerPasteToSkip → executePasteFromPopup
    loadModelsAsync → fetchModelsWithRetry, onModelsLoaded, onModelsLoadFailed
- CodeQualityTools.java: rename inspCtx param → context in all 8 methods
- project.xml: add technical terms to spell-check dictionary

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>